fix: java 버전에 따른 컴파일 에러 수정